Changes for 1.6.1

 - [DEV-168] added support of system.cpu.util[] for OpenBSD agents (Sasha)

Changes for 1.5.5

 - [DEV-211] added support of IPMI (Sasha)
 - [DEV-210] added extended host profile (Artem)
 - [DEV-208] improved events navigation system (Artem)
 - [DEV-207] implemented percentile line in graphs (Artem)
 - [DEV-423] fixed processing of delta and speed per second values (Sasha)
 - [DEV-199] added user group selection in configuration of users screen (Artem)
 - [DEV-205] added possibility to add applications from items form (Artem)
 - [DEV-205] added selection of image type in the list of images (Artem)
 - [DEV-144] added internal authentication selection form (Artem)
 - [ZBX-406] added error messages if fping is not installed (Sasha)

Changes for 1.5.4

 - [DEV-203] fixed probem with permissions of server's shared memory (Sasha)
 - [DEV-202] fixed compilation problem under Solaris (Sasha)
 - [DEV-201] improved performance on disabling/enabling, deleting hosts (Artem)
 - [DEV-200] Queue for proxies (Sasha)
 - [DEV-144] Queue now displays numbers differently (Alexei)
 - [DEV-198] added disabled images in the elements of maps (sasha)
 - [DEV-194] dependent triggers are not count in SoT (Artem)
 - [DEV-187] increased Url field in web scenario (Sasha)
 - [DEV-195] added support of source ip address (Sasha)
 - [DEV-191] added inline update of "Latest Data" screen (Artem)
 - [DEV-193] improved viewing integer items on graphs (Artem)
 - [DEV-196] improved performance of server module (Sasha)
 - [DEV-197] added support of trends_uint (Sasha)
 - [ZBX-391] added charset info to the email header. Thanks to Vadim Pilipenko. (Sasha)
 - [DEV-189] added full clone to hosts (Artem)
 - [DEV-182] added massupdate for triggers (Artem)
 - [DEV-188] implemented sound on/off button in status of triggers screens (Artem) 
 - [DEV-184] added trigger dependencies in export/import (Artem)
 - [DEV-150] added error reporting for zabbix_get (Sasha)